# blog

./: .env.example  .gitignore  README.md  SCHEDULE.md  astro.config.mjs  fix_urls.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
public/documents/E5/: Epreuve E5.md
public/documents/E6/: Epreuve E6.md  Gestion_Projet_App_SGI.xlsx
scripts/: add_slashes_to_internal_links.py  check_tag_links.py  clean-slug-redirects.mjs  fetch-cover-images.mjs  rename-numbered-posts.mjs  update-series-order.mjs
src/: content.config.ts
src/components/: AuthorCard.astro  CoverImage.astro  EmptyState.astro  Footer.astro  Header.astro  PageHeader.astro  PostCard.astro  PostHeader.astro  PostTOC.astro  PostTags.astro
src/components/portfolio/: AboutMe.astro  ContactForm.astro  ExperienceAndEducation.astro  Projects.astro  Recommendations.astro  Skills.astro
src/content/: config.ts
src/data/: portfolio-en.json  portfolio-fr.json  portfolio-lang.json.example
src/i18n/: ui.ts  utils.ts
src/layouts/: LangRedirectLayout.astro  Layout.astro
src/pages/: archive.astro  index.astro  portfolio.astro  rss.xml.js  series.astro  tags.astro
src/pages/[lang]/: [slug].astro  archive.astro  index.astro  portfolio.astro  rss.xml.js
src/redirects/: custom-redirects.json  slug-redirects.json  tag-redirects.json
src/rehype/: rehype-image-zoom.js
src/remark/: remark-autoscroll-image.js  remark-language-tabs.js  remark-video-optimizer.js
src/scripts/: image-zoom.js
src/styles/: fa-subset.css  geist-mono.css  global.css  syntax.css
(+170 files in other folders)
